{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 22,
  "lineage": "66e933f3-05e2-eadd-65c6-ba2fccea916d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503449184478:route-table/rtb-0aa599bb7417109d6",
            "default_route_table_id": "rtb-0aa599bb7417109d6",
            "id": "rtb-0aa599bb7417109d6",
            "owner_id": "503449184478",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff4d483e44c2676a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project1-main-rtb"
            },
            "tags_all": {
              "Name": "project1-main-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-015a0a7b2bde4a4c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw-project1",
            "aws_vpc.vpc-project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node_exporter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4d0bb9670ea8db0",
            "arn": "arn:aws:ec2:us-east-2:503449184478:instance/i-0175c60dd39c338b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0175c60dd39c338b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-030f5688ec00855bd",
            "private_dns": "ip-10-0-10-94.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.94",
            "public_ip": "18.119.235.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d9042784032c7b4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-031248aeadfbcda35"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0600ce51997c02785",
            "tags": {
              "Name": "project1-node_exporter"
            },
            "tags_all": {
              "Name": "project1-node_exporter"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-031248aeadfbcda35"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-project1_nexp",
            "aws_subnet.public-subnets-project1",
            "aws_vpc.vpc-project1",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project1-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4d0bb9670ea8db0",
            "arn": "arn:aws:ec2:us-east-2:503449184478:instance/i-092f125ee891f8cd7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092f125ee891f8cd7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-085374a5f8dacaaa1",
            "private_dns": "ip-10-0-10-189.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.189",
            "public_ip": "52.14.24.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05fb8beaf77c90d81",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08f85f91c22b04f89"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0600ce51997c02785",
            "tags": {
              "Name": "project1-prometheus_server"
            },
            "tags_all": {
              "Name": "project1-prometheus_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f85f91c22b04f89"
            ]
          },
          "dependencies": [
            "aws_instance.node_exporter",
            "aws_security_group.sg-project1",
            "aws_security_group.sg-project1_nexp",
            "aws_subnet.public-subnets-project1",
            "aws_vpc.vpc-project1",
            "data.aws_ami.ubuntu",
            "data.template_file.user_data_template"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-project1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503449184478:internet-gateway/igw-0ff4d483e44c2676a",
            "id": "igw-0ff4d483e44c2676a",
            "owner_id": "503449184478",
            "tags": {
              "Name": "project1-igw"
            },
            "tags_all": {
              "Name": "project1-igw"
            },
            "vpc_id": "vpc-015a0a7b2bde4a4c5"
          },
          "dependencies": [
            "aws_vpc.vpc-project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503449184478:network-acl/acl-0f6e44d3d156b6155",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f6e44d3d156b6155",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "503449184478",
            "subnet_ids": [],
            "tags": {
              "Name": "project1-public-nacl"
            },
            "tags_all": {
              "Name": "project1-public-nacl"
            },
            "vpc_id": "vpc-015a0a7b2bde4a4c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_subnet_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-01622783967cf53e1",
            "network_acl_id": "acl-0f6e44d3d156b6155",
            "subnet_id": "subnet-0600ce51997c02785"
          },
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_subnet.public-subnets-project1",
            "aws_vpc.vpc-project1"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-01c86e2dc951bc358",
            "network_acl_id": "acl-0f6e44d3d156b6155",
            "subnet_id": "subnet-0afab86a36b948b30"
          },
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_subnet.public-subnets-project1",
            "aws_vpc.vpc-project1"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-026b0acc7773c440c",
            "network_acl_id": "acl-0f6e44d3d156b6155",
            "subnet_id": "subnet-039f1aecf47324eb0"
          },
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_subnet.public-subnets-project1",
            "aws_vpc.vpc-project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07eb3f30298220621",
            "route_table_id": "rtb-0aa599bb7417109d6",
            "subnet_id": "subnet-0600ce51997c02785"
          },
          "dependencies": [
            "aws_default_route_table.main-rtb",
            "aws_internet_gateway.gw-project1",
            "aws_subnet.public-subnets-project1",
            "aws_vpc.vpc-project1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048e4d308604c8004",
            "route_table_id": "rtb-0aa599bb7417109d6",
            "subnet_id": "subnet-0afab86a36b948b30"
          },
          "dependencies": [
            "aws_default_route_table.main-rtb",
            "aws_internet_gateway.gw-project1",
            "aws_subnet.public-subnets-project1",
            "aws_vpc.vpc-project1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09681dd3fa7805ab4",
            "route_table_id": "rtb-0aa599bb7417109d6",
            "subnet_id": "subnet-039f1aecf47324eb0"
          },
          "dependencies": [
            "aws_default_route_table.main-rtb",
            "aws_internet_gateway.gw-project1",
            "aws_subnet.public-subnets-project1",
            "aws_vpc.vpc-project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-project1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503449184478:security-group/sg-08f85f91c22b04f89",
            "description": "upper(project1) security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f85f91c22b04f89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node Exporter",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "project1-security-group",
            "name_prefix": "",
            "owner_id": "503449184478",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015a0a7b2bde4a4c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-project1_nexp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503449184478:security-group/sg-031248aeadfbcda35",
            "description": "upper(project1) security-group for node exporter",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031248aeadfbcda35",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node Exporter",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "project1-security-group-nexp",
            "name_prefix": "",
            "owner_id": "503449184478",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-015a0a7b2bde4a4c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets-project1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503449184478:subnet/subnet-0428b2e6739808658",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0428b2e6739808658",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503449184478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project1-private-subnet-A"
            },
            "tags_all": {
              "Name": "project1-private-subnet-A"
            },
            "vpc_id": "vpc-015a0a7b2bde4a4c5"
          },
          "dependencies": [
            "aws_vpc.vpc-project1"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503449184478:subnet/subnet-07699471c447b301d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07699471c447b301d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503449184478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project1-private-subnet-B"
            },
            "tags_all": {
              "Name": "project1-private-subnet-B"
            },
            "vpc_id": "vpc-015a0a7b2bde4a4c5"
          },
          "dependencies": [
            "aws_vpc.vpc-project1"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503449184478:subnet/subnet-06ed52c3aa682f5c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.15.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ed52c3aa682f5c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503449184478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project1-private-subnet-C"
            },
            "tags_all": {
              "Name": "project1-private-subnet-C"
            },
            "vpc_id": "vpc-015a0a7b2bde4a4c5"
          },
          "dependencies": [
            "aws_vpc.vpc-project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets-project1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503449184478:subnet/subnet-0600ce51997c02785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0600ce51997c02785",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503449184478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project1-public-subnet-A"
            },
            "tags_all": {
              "Name": "project1-public-subnet-A"
            },
            "vpc_id": "vpc-015a0a7b2bde4a4c5"
          },
          "dependencies": [
            "aws_vpc.vpc-project1"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503449184478:subnet/subnet-0afab86a36b948b30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afab86a36b948b30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503449184478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project1-public-subnet-B"
            },
            "tags_all": {
              "Name": "project1-public-subnet-B"
            },
            "vpc_id": "vpc-015a0a7b2bde4a4c5"
          },
          "dependencies": [
            "aws_vpc.vpc-project1"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503449184478:subnet/subnet-039f1aecf47324eb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039f1aecf47324eb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503449184478",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project1-public-subnet-C"
            },
            "tags_all": {
              "Name": "project1-public-subnet-C"
            },
            "vpc_id": "vpc-015a0a7b2bde4a4c5"
          },
          "dependencies": [
            "aws_vpc.vpc-project1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-project1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503449184478:vpc/vpc-015a0a7b2bde4a4c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a563feb4e6db91c",
            "default_route_table_id": "rtb-0aa599bb7417109d6",
            "default_security_group_id": "sg-0e4f444cdd72c3bee",
            "dhcp_options_id": "dopt-07186e87aca2dcc39",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015a0a7b2bde4a4c5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa599bb7417109d6",
            "owner_id": "503449184478",
            "tags": {
              "Name": "project1-vpc"
            },
            "tags_all": {
              "Name": "project1-vpc"
            }
          }
        }
      ]
    }
  ]
}